# Monopoke

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  地产兽域_游戏设计提案.md
assets/data/: events.json  items.json  monsters.json  skills.json  tiles.json
src/: main.cpp
src/core/: Game.cpp  Game.h  GameState.cpp  GameState.h  StateManager.cpp  StateManager.h
src/entity/: Board.cpp  Board.h  Item.h  Monster.cpp  Monster.h  Player.cpp  Player.h  Skill.h  Tile.cpp  Tile.h
src/render/: BoardRenderer.cpp  BoardRenderer.h
src/states/: BattleState.cpp  BattleState.h  MenuState.cpp  MenuState.h  PlayState.cpp  PlayState.h  ResultState.cpp  ResultState.h  ShopState.cpp  ShopState.h  UITestState.cpp  UITestState.h
src/system/: AISystem.cpp  AISystem.h  BattleSystem.cpp  BattleSystem.h  EconomySystem.cpp  EconomySystem.h  EventSystem.cpp  EventSystem.h  MonsterSystem.cpp  MonsterSystem.h  ShopSystem.cpp  ShopSystem.h
src/ui/: RetroUI.cpp  RetroUI.h
src/utils/: AudioManager.cpp  AudioManager.h  ConfigManager.cpp  ConfigManager.h  Random.cpp  Random.h  SaveManager.cpp  SaveManager.h  Types.h
